<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail__cl__root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".feature.detail.view.ui.DetailActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_main_no_data"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuote"
        android:layout_width="@dimen/fully_stretchable"
        android:layout_height="@dimen/fully_stretchable"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:padding="@dimen/sixteen"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_twenty"
        app:layout_constraintBottom_toTopOf="@id/tvTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDownvotes"
        tools:text="Data repo text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAuthor"
        android:layout_width="@dimen/fully_stretchable"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight"
        android:padding="@dimen/eight"
        android:textColor="#FF444444"
        android:textSize="@dimen/text_eighteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Dagger 2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDetailProfilePic"
        android:layout_width="@dimen/hundred"
        android:layout_height="@dimen/hundred"
        android:layout_marginEnd="@dimen/eight"
        android:adjustViewBounds="true"
        android:contentDescription="@string/default_content_description"
        app:layout_constraintBottom_toBottomOf="@id/tvDownvotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvFavs"
        app:srcCompat="@drawable/img_quote" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFavs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:drawableStart="@drawable/ic_fav_on"
        android:gravity="center"
        android:padding="@dimen/eight"
        android:text="@string/tv_placeholder_na"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUrl"
        tools:text=" 234 " />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUpvotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/four"
        android:drawableStart="@drawable/ic_upvotes"
        android:gravity="center"
        android:padding="@dimen/eight"
        android:text="@string/tv_placeholder_na"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFavs"
        tools:text=" 98 " />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDownvotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/four"
        android:drawableStart="@drawable/ic_downvotes"
        android:gravity="center"
        android:padding="@dimen/eight"
        android:text="@string/tv_placeholder_na"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUpvotes"
        tools:text=" 12 " />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUrl"
        android:layout_width="@dimen/fully_stretchable"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:autoLink="web"
        android:gravity="center"
        android:textSize="@dimen/text_twelve"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
        tools:text="https://www.google.com" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTags"
        android:layout_width="@dimen/fully_stretchable"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginBottom="@dimen/eight"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="[tag1, tag2, tag3]" />

</androidx.constraintlayout.widget.ConstraintLayout>